--- a/favorites.html
+++ b/favorites.html
@@ -11,10 +11,10 @@
     <!-- I heard you wanted a comment-->
     <nav>
         <ul>
-            <li ><a href="./index.html">Home Page</a></li>
-            <li ><a href="./favorites.html">My Favorite Things</a></li>
-            <li ><a href="./skills.html">My Skills</a></li>
-            <li><a  href="./spots.html">My Favorite Spots</a></li>
+            <li ><a href="index.html">Home Page</a></li>
+            <li ><a href="favorites.html">My Favorite Things</a></li>
+            <li ><a href="skills.html">My Skills</a></li>
+            <li><a  href="spots.html">My Favorite Spots</a></li>
         </ul>
     </nav>
     <h1>Punnet squares are one of my favorite things to do. Here's an example:</h1>
