--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- I heard you wanted a comment-->
     <nav>
         <ul>
-            <li ><a href="./index.html">Home Page</a></li>
-            <li ><a href="./favorites.html">My Favorite Things</a></li>
-            <li ><a href="./skills.html">My Skills</a></li>
-            <li><a  href="./spots.html">My Favorite Spots</a></li>
+            <li ><a href="index.html">Home Page</a></li>
+            <li ><a href="favorites.html">My Favorite Things</a></li>
+            <li ><a href="skills.html">My Skills</a></li>
+            <li><a  href="spots.html">My Favorite Spots</a></li>
         </ul>
     </nav>
    <h1>Arthur</h1>
