--- a/skills.html
+++ b/skills.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="changes.css">
 </head>
 <body>
+    <div class="body">
     <!-- I heard you wanted a comment-->
     <nav>
-        <ul>
+        <ul class="navigation">
             <li ><a href="index.html">Home Page</a></li>
             <li ><a href="favorites.html">My Favorite Things</a></li>
             <li ><a href="skills.html">My Skills</a></li>
@@ -39,7 +40,10 @@
         <p>Have you learnt how to juggle?</p>
         <label>YES!<input type="radio" name="b"></label>
         <label>Not yet but currently my life mission.<input type="radio" name="b"></label>
+        <p></p>
+        <button type="submit">Submit</button>
     </form>
 </section>
+</div>
 </body>
 </html>
