--- a/spots.html
+++ b/spots.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="changes.css">
 </head>
 <body>
+    <div class="body">
     <!-- I heard you wanted a comment-->
-    <nav>
-        <ul>
+    <nav >
+        <ul class="navigation">
             <li ><a href="index.html">Home Page</a></li>
             <li ><a href="favorites.html">My Favorite Things</a></li>
             <li ><a href="skills.html">My Skills</a></li>
@@ -39,6 +40,7 @@
 <form>
    
 </form>
+</div>
 </body>
 </html>
 
