--- a/favorites.html
+++ b/favorites.html
@@ -41,7 +41,7 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=0Q9ToKwuAgBc-OpP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <figure>
   <figcaption>I also like to listen to stuff:</figcaption>
-  <audio controls src="_Fallen Kingdom_ - A Minecraft Parody of Coldplay's Viva la Vida (Music Video).mp3">
+  <audio controls src="fallenKingdom.mp3">
     
   </audio>
 </figure>
